<resources>
    <string name="app_name">EmpanadApp</string>
    <string name="hint_username">Ingrese su usuario</string>
    <string name="hint_nombre">Ingrese su nombre</string>
    <string name="hint_apellido">Ingrese su apellido</string>
    <string name="hint_dni">Ingrese su DNI</string>
    <string name="hint_celular">Ingrese su celular</string>
    <string name="hint_direccion">Ingrese su direccion</string>
    <string name="hint_email">Ingrese su email</string>
    <string name="hint_password">contraseña</string>
    <string name="hint_confirm_password">confirmar contraseña</string>
    <string name="login_error_msg">Error: Campos faltantes o erroneos</string>
    <string name="button_login">Ingresar</string>
    <string name="button_register">Registrarse</string>
    <string name="login_failed">Login failed</string>
    <string name="welcome_register">Crea tu cuenta de EmpanadApp</string>
    <string name="welcome_login">¡Te damos la Bienvenida!</string>
    <string name="button_historial_carrito">Historial de Compra</string>
    <string name="button_datos_personales">Datos Personales</string>
    <string name="button_cerrar_sesion">Cerrar Sesión</string>
    <string name="name_carrito">Mi Carrito</string>
    <string name="name_historial">Tus Compras</string>
    <string name="name_datos_personales">Datos Personales</string>
    <string name="cantidad_producto">0</string>
    <string name="button_compra">Comprar</string>
    <string name="txt_fecha">Fecha:</string>
    <string name="txt_cantidad_empanadas">Cantidad de empanadas:</string>
    <string name="txt_importe_total">Importe a pagar:</string>
    <string name="name_productosHistorial">Productos Seleccionados</string>
</resources>